# secundo-pm

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec.cpp  exec.hpp  global.hpp  installer.hpp  lang.hpp  main.cpp  nohup.out  package.hpp  pkgins.cfg  secpm  test.sc  translation.hpp  tstring.hpp
lang/: dependencies.hpp  executor.hpp  functions.hpp  runtime.hpp  syntax.hpp  tokenizer.hpp
lang/cmds/: commands.hpp
pkg/: config.yml  de.yml  en.yml  ins.sc  lat.yml
